erDiagram
  USERS ||--o{ ROLE_USER : has
  ROLES ||--o{ ROLE_USER : has
  USERS ||--o| STUDENT_PROFILES : owns
  DEPARTMENTS ||--o{ PROGRAM_OFFERINGS : offers
  PROGRAM_OFFERINGS ||--o{ APPLICATIONS : receives
  USERS ||--o{ APPLICATIONS : submits
  APPLICATIONS ||--o{ APPLICATION_DOCUMENTS : attaches
  PROGRAM_OFFERINGS ||--o{ STUDENT_PROFILES : enrolls
  PROGRAM_OFFERINGS ||--o{ FEE_SCHEDULES : prices
  FEE_SCHEDULES ||--o{ FEE_INSTALLMENTS : splits
  STUDENT_PROFILES ||--o{ PAYMENT_SUBMISSIONS : reports
  PAYMENT_SUBMISSIONS ||--o| SCHOOL_RECEIPTS : yields
  STUDENT_PROFILES ||--o{ TUITION_DEFERRALS : requests
  PROGRAM_OFFERINGS ||--o{ COURSES : scopes
  COURSES ||--o{ COURSE_SESSIONS : schedules
  COURSES ||--o{ ASSIGNMENTS : sets
  COURSES ||--o{ COURSE_RESULTS : grades
  COURSE_RESULTS ||--o{ RESULT_DISPUTES : raises
  USERS ||--o{ AUDIT_LOGS : acts
